--- a/webapp-deployment.yaml
+++ b/webapp-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: webapp
-          image: galacticmeteor/loginapp-webapp:1.0
+          image: myimagesregistry.azurecr.io/devops-app:1.0.0-41
           ports:
             - containerPort: 8080
           env:
