--- a/prod/mysql-initdb-configmap.yaml
+++ b/prod/mysql-initdb-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-initdb
+  namespace: prod
 data:
   init-db.sql: |
     -- Database initialization script
