--- a/prod/secret.yaml
+++ b/prod/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db-credentials
+  namespace: prod
 type: Opaque
 data:
   username: YXBwdXNlcg==       # base64 of 'appuser'
