--- a/prod/mysql-deployment.yaml
+++ b/prod/mysql-deployment.yaml
@@ -18,6 +18,13 @@ spec:
           image: mysql:8.0
           ports:
             - containerPort: 3306
+          resources:
+            requests:
+              cpu: "500m"
+              memory: "1Gi"
+            limits:
+              cpu: "1"
+              memory: "2Gi"
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
