--- a/dev/webapp-deployment.yaml
+++ b/dev/webapp-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: webapp
-          image: galacticmeteor/devops-app:latest
+          image: galacticmeteor/devops-app:1.0.0-64
           ports:
             - containerPort: 8080
           resources:
